fixed svg rendering on mobile and safari

--- a/style.css
+++ b/style.css
@@ -378,6 +378,7 @@
 .window-btn {
 	flex: 0 0 auto;
 	aspect-ratio: 1/1;
+	height: 100%;
 	border: 2px outset var(--white);
 	cursor: pointer;
 	display: flex;
@@ -395,7 +396,6 @@
 	border: 2px inset var(--white);
 }
 .window-btn svg {
-	width: 100%;
 	height: 100%;
 }
 
